# py-melissa-climate

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE.md  Pipfile  README.md  pyproject.toml  setup.py  travis.yml
.github/workflows/: python-package.yml  python-publish.yml
melissa/: __init__.py  async_wrapper.py  const.py  core.py  exceptions.py  wrapper.py
tests/: __init__.py  helpers.py  test_init.py
tests/fixtures/: auth_login.json  auth_login_denied.json  bad_hum_status.json  bad_temp_status.json  cur_settings.json  error.json  fetch_devices.json  fetch_geofences.json  send.json  status.json
